examples/test/testpolicy12518.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12518
  namespace: namespace98
spec:
  podSelector:
    matchLabels:
      key17: value37
      key26: value25
      key19: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value35
          key17: value4
          key36: value22
      podSelector:
        matchLabels:
          key40: value9
          key11: value32
          key48: value7
